--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SpecRunner</title>
+  <title>Notes App</title>
 
   <!-- Testing Framework Library -->
-  <script src="lib/framework.js"></script>
+  <script src="tests/assert.js"></script>
 
   <!-- Source Code -->
-  <script src="src/notes.js"></script>
+  <script src="src/note-model.js"></script>
 
-  <!-- Spec Code -->
-  <script src="spec/notesSpec.js"></script>
+  <!-- Testing Code -->
+  <script src="tests/note-model-tests.js"></script>
 
 </head>
 <body>
