--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
   <!-- Source Code -->
   <script src="src/note-model.js"></script>
+  <script src="src/note-list-model.js"></script>
 
   <!-- Testing Code -->
   <script src="tests/note-model-tests.js"></script>
+  <script src="tests/note-list-model-tests.js"></script>
 
 </head>
 <body>
 
-
+<h1>Notes</h1>
 
 </body>
 </html>
