--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   <!-- Source Code -->
   <script src="src/note-model.js"></script>
   <script src="src/note-list-model.js"></script>
+    <script src="src/note-list-view.js"></script>
 
   <!-- Testing Code -->
   <script src="tests/note-model-tests.js"></script>
   <script src="tests/note-list-model-tests.js"></script>
+  <script src="tests/note-list-view-tests.js"></script>
+
 
 </head>
 <body>
