added a controller, which requires element by ID and changes content dynamically

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 <body>
 
 <h1>Notes</h1>
-<div id="app">
-  Hello
+<div id="app">Hello</div>
 
-</div>
+
+<script src="src/note-controller.js"></script>
+
 
 </body>
 </html>
