--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="tests/note-model-tests.js"></script>
   <script src="tests/note-list-model-tests.js"></script>
   <script src="tests/note-list-view-tests.js"></script>
+  <script src="tests/note-controller-tests.js"></script>
 
 
 </head>
