--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Notes App</title>
 
-  <!-- Testing Framework Library -->
-  <script src="tests/assert.js"></script>
-
-  <!-- Source Code -->
-  <script src="src/note-model.js"></script>
-  <script src="src/note-list-model.js"></script>
-    <script src="src/note-list-view.js"></script>
-
-  <!-- Testing Code -->
-  <script src="tests/note-model-tests.js"></script>
-  <script src="tests/note-list-model-tests.js"></script>
-  <script src="tests/note-list-view-tests.js"></script>
-  <script src="tests/note-controller-tests.js"></script>
-
-
 </head>
 <body>
 
 <h1>Notes</h1>
 <div id="app">Hello</div>
 
+  <!-- Testing Framework Library -->
+  <script src="tests/assert.js"></script>
 
-<script src="src/note-controller.js"></script>
+  <!-- Source Code -->
+    <!-- forEach -->
+  <!-- Testing Code -->
+  <script src="src/note-model.js"></script>
+  <script src="tests/note-model-tests.js"></script>
 
+  <script src="src/note-list-model.js"></script>
+  <script src="tests/note-list-model-tests.js"></script>
+
+  <script src="src/note-list-view.js"></script>
+  <script src="tests/note-list-view-tests.js"></script>
+
+  <script src="src/note-controller.js"></script>
+  <script src="tests/note-controller-tests.js"></script>
+
+  <script src="src/single-note-view.js"></script>
+  <script src="tests/single-note-view-tests.js"></script>
 
 </body>
 </html>
