added funcationality to get multiple notes from the conrtoller by ElementID

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
 
 <h1>Notes</h1>
+<!-- <a href="" id="note1">Super hello!</a> -->
+<a href="#note1"> Note 1</a> |
+<a href="#note2"> Note 2</a> |
+<a href="#note3"> Note 3</a> |
+<a href="#note4"> Note 4</a> |
+
+<div id="notebook"></div>
 <div id="app">Hello</div>
+
+<!-- <script src="src/add-note1-with-id.js"></script> -->
+<!-- <script src="src/add-multiple-notes.js" ></script> -->
 
   <!-- Testing Framework Library -->
   <script src="tests/assert.js"></script>
